fixed bg covers

--- a/app/assets/stylesheets/site/pages/_acquired.sass
+++ b/app/assets/stylesheets/site/pages/_acquired.sass
@@ -3,7 +3,6 @@
   padding: 100px 0px
   background: image-url('acquired.jpg') no-repeat center center 
   position: relative
-  height: 100%
   width: 100%  
   +bg-cover
   
