--- a/app/assets/stylesheets/site/pages/_awards.sass
+++ b/app/assets/stylesheets/site/pages/_awards.sass
@@ -2,9 +2,7 @@
   padding: 100px 0px
   background: image-url('awards.jpg') no-repeat center center 
   position: relative
-  height: 100%
   width: 100%
-
   +bg-cover
   
   h2,p
